vpc/public-subnets.tf
resource "aws_internet_gateway" "default" {
  vpc_id = "${aws_vpc.default.id}"
}

resource "aws_subnet" "public" {
  count = 3
  vpc_id = "${aws_vpc.default.id}"
  cidr_block = "${lookup(var.public_cidrs, concat("zone", count.index))}"
  availability_zone = "${lookup(var.availability_zones, concat("zone", count.index))}"
  map_public_ip_on_launch = true
  tags {
    Name = "${var.env}-public-subnet-${count.index}"
  }

  depends_on = ["aws_internet_gateway.default"]
}

resource "aws_route_table" "public" {
  vpc_id = "${aws_vpc.default.id}"
  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = "${aws_internet_gateway.default.id}"
  }
}

resource "aws_route_table_association" "public" {
  count = 3
  subnet_id = "${element(aws_subnet.public.*.id, count.index)}"
  route_table_id = "${aws_route_table.public.id}"
}
